--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "joi": "^17.10.1",
     "mongoose": "^7.5.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
